# Polyhedron

./: .gitignore  CMakeLists.txt  README.md  doxyfile  doxyfile.in  main.cpp
cmake/: FindGperftools.cmake  FindHDF5.cmake
examples/: Hexahedra.stl  atlas.json  demo.json  description.txt  dragon.json  hell.json  life.json  pyramid.stl  surface.json  tetra.stl  tornado.json  tornado2.json  tube.json
examples/figure/: hexahedra.stl  prizm.stl  pyramid.stl  pyramid2.stl  tetra.stl  tornado.stl
includes/: allstd.h
includes/control/: calculation_controller.h  configuration.h  mpi_commutator.h  mpi_wrapper.h
includes/core/: indexed_object.h
includes/core/cell/: cell.h  data_holder.h  side.h
includes/core/face/: face.h  face_flag.h  faces_list.h
includes/core/generator/: cuboid_generator.h  decomposition.h  geometry_generator.h  orth_decomposition.h  real_sector_generator.h  rectangle_generator.h  sector3d_generator.h  sector_generator.h  structured_decomposition.h  structured_generator.h
includes/core/layer/: border_control.h  ghost_control.h  layer_control.h
includes/core/mesh/: balancing_options.h  mesh.h  partitioner.h
includes/core/vertex/: vertex.h
includes/io/: console.h  mesh_writer.h
includes/io/csv/: csv_writer.h
includes/io/dat/: dat_writer.h
includes/io/hdf/: hdf_utils.h  hdf_writer.h
includes/io/vtk/: vtk_writer.h
includes/problems/: amr_problem.h  convection_problem.h  game_of_life.h  jacobi.h  problem.h  surface_problem.h
includes/utils/: geom.h  interface.h  inverse.h  math.h  stopwatch.h
includes/utils/memory/: kd_tree.h  list_position.h  node.h  node_list.h
includes/utils/partitioning/: base_splitter_1d.h  base_splitter_2d.h  rcb_splitter.h  splitter.h  voronoi_diagram.h
includes/utils/surface/: Surface.hpp  Triangle.hpp  Vertex.hpp  bbox.hpp  face.hpp  surface.hpp  task.h  triangle.hpp  vertex.hpp
libs/Eigen/src/Core/: AssignEvaluator.h
sources/control/: calculation_controller.cpp  configuration.cpp  mpi_wrapper.cpp
sources/core/cell/: cell.cpp  data_holder.cpp  side.cpp
sources/core/face/: face.cpp  faces_list.cpp
sources/core/generator/: cuboid_generator.cpp  decomposition.cpp  geometry_generator.cpp  orth_decomposition.cpp  real_sector_generator.cpp  rectangle_generator.cpp  sector3d_generator.cpp  sector_generator.cpp  structured_decomposition.cpp  structured_generator.cpp
sources/core/layer/: border_control.cpp  ghost_control.cpp  layer_control.cpp
sources/core/mesh/: balancing_options.cpp  mesh.cpp  mesh_adaptation.cpp  mesh_balancing.cpp  mesh_communication.cpp  mesh_restart.cpp  partitioner.cpp
sources/core/vertex/: vertex.cpp
sources/io/: console.cpp  mesh_writer.cpp
sources/io/csv/: csv_writer.cpp
sources/io/dat/: dat_writer.cpp
sources/io/hdf/: hdf_utils.cpp  hdf_writer.cpp
sources/io/vtk/: vtk_writer.cpp
sources/problems/: amr_problem.cpp  convection_problem.cpp  game_of_life.cpp  jacobi.cpp  problem.cpp  surface_problem.cpp
sources/utils/: geom.cpp  interface.cpp  math.cpp
sources/utils/memory/: kd_tree.cpp  list_position.cpp  node.cpp  node_list.cpp
sources/utils/partitioning/: base_splitter_1d.cpp  base_splitter_2d.cpp  rcb_splitter.cpp  splitter.cpp  voronoi_diagram.cpp
sources/utils/surface/: Surface.cpp  Triangle.cpp  Vertex.cpp  bbox.cpp  face.cpp  surface.cpp  triangle.cpp  vertex.cpp
tests/: test_is_inside.cpp  test_surface.cpp  test_surface1.cpp  test_surface2.cpp  test_surface3.cpp  tests_surface.cpp
